--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,84 @@
-header .nav1 ul li a {
+header .nav1 {
+  background-color: #F8F9FA;
+}
+header .nav1 ul {
+  display: flex;
+  list-style-type: none;
+}
+header .nav1 ul li {
+  padding-top: 10px;
+  margin: 10px;
+}
+header .nav1 img {
+  width: 100px;
+}
+header .nav1 a {
   text-decoration: none;
+}
+header .nav2 {
+  background-color: #E3CFF3;
+}
+
+.botonadolfo {
+  background-color: #E3CFF3;
+  padding: 9px 25px;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+
+button:hover {
+  background-color: #B68BDF;
+}
+
+.separador {
+  padding: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ima {
+  max-width: 100%;
+}
+
+.container-item {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+
+.item {
+  border-radius: 10px;
+}
+
+.item:hover {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.info-product {
+  padding: 15px 30px;
+}
+
+.item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px 10px 0 0;
+  transition: all 0.5s;
+}
+
+.item:hover img {
+  transform: scale(1.2);
+}
+
+.info-product {
+  padding: 15px 30px;
+  line-height: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
