--- a/css/style.css
+++ b/css/style.css
@@ -107,10 +107,10 @@ footer img {
   display: flex;
   align-items: center;
 }
-footer h2 {
+footer h3 {
   display: flex;
   align-items: center;
-  padding: 0 0 0 1100px;
+  padding: 9px 0 0 700px;
 }
 
 /*# sourceMappingURL=style.css.map */
