--- a/scss/style.scss
+++ b/scss/style.scss
@@ -112,9 +112,9 @@ footer{
         display: flex;
         align-items: center;
     }
-    h2{
+    h3{
         display: flex;
         align-items: center;
-        padding: 0 0 0 1100px;
+        padding: 9px 0 0 700px;
     }
 }
