--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,6 +52,24 @@ button:hover{
     gap: 20px;
 }
 
+@media (max-width: 1366px){
+    .container-item{
+        padding: 0 50px 0 50px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px; 
+    }
+}
+
+@media (max-width: 480px){
+    .container-item{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px; 
+        width: 1px;
+    }
+}
+
 .item{
     border-radius: 10px;
 }
@@ -99,6 +117,24 @@ button:hover{
 .nosotross{
     .ubi{
         padding: 0 50px 0 10px;
+    }
+}
+
+@media (max-width: 1366px){
+    .nosotross{
+        flex-direction: column;
+        .ubi{
+            padding: 100px;
+        }
+    }
+}
+
+@media (max-width: 480px){
+    .nosotross{
+        flex-direction: column;
+        .ubi{
+            width: 100%;
+        }
     }
 }
 
