--- a/scss/componentes/_footer.scss
+++ b/scss/componentes/_footer.scss
@@ -1,5 +1,8 @@
+@import '../base/variables';
+@import '../base/extendes';
+
 footer{
-    background-color: #E3CFF3;
+    background-color: $color-dos;
     display: flex;
     justify-content: space-between;
     padding: 50px;
@@ -12,8 +15,7 @@ footer{
         padding-right: 50px;
         padding-top: 10px;
         a{
-            display: flex;
-            justify-content: center;
+            @extend %centrar;
             text-decoration: none;
         }
     }
