--- a/scss/componentes/header.scss
+++ b/scss/componentes/header.scss
@@ -1,3 +1,5 @@
+@import '../base/variables';
+
 header{
     .nav1{
         background-color: #F8F9FA;
@@ -17,6 +19,7 @@ header{
         }
     }
     .nav2{
-        background-color: #E3CFF3;
+        background-color: $color-dos;
     }
 }
+
