--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,13 @@
-@import 'componentes/header.scss';
+@import 'componentes/header';
 @import 'componentes/footer';
+@import 'componentes/muestrario';
+@import 'componentes/inicio';
+@import 'componentes/registro';
+@import 'componentes/mediaqueries';
+@import 'base/extendes';
 
 .botonadolfo{
-    background-color: #E3CFF3;
+    background-color: $color-dos;
     padding: 9px 25px;
     border: none;
     border-radius: 50px;
@@ -11,57 +16,17 @@
 }
 
 button:hover{
-    background-color: #B68BDF;
+    background-color: $color-uno;
 }
 
 .separador{
     padding: 90px;
-    display: flex;
-    justify-content: center;
+    @extend %centrar;
     align-items: center;
 }
 
 .ima{
     max-width: 100%;
-}
-
-.container-item{
-    padding: 0 50px 0 50px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 100px;
-}
-
-.item{
-    border-radius: 10px;
-}
-
-.item:hover{
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.20);
-}
-
-.info-product{
-    padding: 15px 30px;
-}
-
-.item img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 10px 10px 0 0;
-    transition: all .5s;
-}
-
-.item:hover img{
-    transform: scale(1.2);
-}
-
-.info-product{
-    padding: 15px 30px;
-    line-height: 2;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
 }
 
 .nosotross{
@@ -102,12 +67,6 @@ button:hover{
     
 }
 
-.muestrario{
-    .carruseladolfo{ 
-        width: 350px;
-    }
-}
-
 .info-producto{
     padding-left: 100px;
     padding-top: 40px;
@@ -119,98 +78,11 @@ span.product-condicion-principal {
     line-height: 2.3;
     font-size: 1em;
     font-weight: bold;
-    background-color: #B68BDF;
+    background-color: $color-uno;
     text-align: center;
     border-radius: 99px;
     padding: 0 1.2em;
     width: 150px;
     color: black;
 }
-
-.container-reg{
-    width: 500px;
-    padding: 20px;
-    background: #E3CFF3;
-    margin: auto;
-    margin-top: 90px;
-    margin-bottom: 100px;
-    border-radius: 10px;
-    .titulo{
-        text-align: center;
-        border: solid #B68BDF;
-        border-style: dashed;
-        padding: 15px;
-    }
-    .padre{
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        gap: 25px;
-        .nombre,.apellidos,.email,.contraseña{
-            display: flex;
-            flex-direction: column;
-            label{
-                padding-bottom: 5px;
-            }
-        }
-        input{
-            padding-top: 20px;
-        }
-        input:hover{
-            outline: solid #B68BDF;
-        }
-        .cuenta{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            p{
-                padding-top: 5px;
-            }
-        }
-    }
-}
-
-.container-in{
-    width: 500px;
-    padding: 20px;
-    background: #E3CFF3;
-    margin: auto;
-    margin-top: 90px;
-    margin-bottom: 100px;
-    border-radius: 10px;
-    .titulo{
-        text-align: center;
-        border: solid #B68BDF;
-        border-style: dashed;
-        padding: 15px;
-    }
-    .padre{
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        gap: 25px;
-        .email,.contraseña{
-            display: flex;
-            flex-direction: column;
-            label{
-                padding-bottom: 5px;
-            }
-        }
-        input{
-            padding-top: 20px;
-        }
-        input:hover{
-            outline: solid #B68BDF;
-        }
-        .cuenta{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            p{
-                padding-top: 5px;
-            }
-        }
-    }
-}
-
 
