--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ header .nav2 {
   background-color: #E3CFF3;
 }
 
-/*Colores*/
 .separador, footer .derecha a {
   display: flex;
   justify-content: center;
@@ -47,7 +46,6 @@ footer .derecha a {
 }
 
 .container-item {
-  padding: 0 50px 0 50px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 100px;
@@ -183,18 +181,48 @@ footer .derecha a {
   }
 }
 /*muestrario responsive*/
-@media screen and (min-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .container-item {
+    padding-right: 100px;
+    padding-left: 100px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 500px;
+    gap: 200px;
   }
 }
-@media screen and (min-width: 430px) {
+@media screen and (max-width: 430px) {
   .container-item {
+    padding-right: 10px;
+    padding-left: 10px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
+    gap: 20px;
+  }
+  .container-item .item .info-product h2 {
+    font-size: 15px;
+  }
+}
+/**/
+@media screen and (max-width: 1024px) {
+  .producto {
+    display: flex;
+    justify-content: stretch;
+    padding-left: 180px;
+    padding-top: 50px;
+  }
+}
+@media screen and (max-width: 820px) {
+  .producto {
+    display: flex;
+    justify-content: stretch;
+    padding-left: 90px;
+    padding-top: 50px;
+  }
+}
+@media screen and (max-width: 432px) {
+  .producto {
+    display: flex;
+    flex-direction: column;
   }
 }
 .separador, footer .derecha a {
@@ -243,7 +271,7 @@ button:hover {
 }
 
 .iframe-responsivo {
-  width: 1440px;
+  width: 100%;
   height: 400px;
 }
 
@@ -254,7 +282,10 @@ button:hover {
 .producto {
   display: flex;
   justify-content: stretch;
-  padding: 100px 0 100px 300px;
+}
+
+.producto1 {
+  padding: 100px 300px;
 }
 
 .info-producto {
