--- a/scss/componentes/_mediaqueries.scss
+++ b/scss/componentes/_mediaqueries.scss
@@ -11,18 +11,61 @@
 
 /*muestrario responsive*/
 
-@media screen and (min-width: 1024px) {
+@media screen and (max-width: 1024px) {
     .container-item {
+        padding-right: 100px;
+        padding-left: 100px;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: 500px;
+        gap: 200px;
       }
 }
 
-@media screen and (min-width: 430px) {
+@media screen and (max-width: 430px) {
     .container-item {
+        padding-right: 10px;
+        padding-left: 10px;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: 10px;
+        gap: 20px;
+        .item{
+            .info-product{
+                h2{
+                    font-size: 15px;
+                }
+            }
+        }
       }
 }
+
+/**/
+
+@media screen and (max-width: 1024px) {
+    .producto{
+        display: flex;
+        justify-content: stretch;
+        padding-left: 180px;
+        padding-top: 50px;
+      }
+}
+
+
+@media screen and (max-width: 820px) {
+    .producto{
+        display: flex;
+        justify-content: stretch;
+        padding-left: 90px;
+        padding-top: 50px;
+      }
+}
+
+@media screen and (max-width: 432px) {
+    .producto{
+        display: flex;
+        flex-direction: column;
+      }
+}
+
+
+
+
