--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,7 +52,7 @@ button:hover{
 }
 
 .iframe-responsivo{
-    width: 1440px;
+    width: 100%;
     height: 400px;
 }
 
@@ -63,8 +63,10 @@ button:hover{
 .producto{
     display: flex;
     justify-content: stretch;
-    padding: 100px 0  100px 300px;
-    
+}
+
+.producto1{
+    padding: 100px 300px;
 }
 
 .info-producto{
