--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ header .nav2 {
   background-color: #E3CFF3;
 }
 
+/*Colores*/
 .separador, footer .derecha a {
   display: flex;
   justify-content: center;
@@ -181,6 +182,14 @@ footer .derecha a {
   }
 }
 /*muestrario responsive*/
+@media screen and (min-width: 1030px) {
+  .container-item {
+    padding: 0 50px 0 50px;
+  }
+  .container-item .info-product h2 {
+    font-size: 25px;
+  }
+}
 @media screen and (max-width: 1024px) {
   .container-item {
     padding-right: 100px;
@@ -190,7 +199,7 @@ footer .derecha a {
     gap: 200px;
   }
 }
-@media screen and (max-width: 430px) {
+@media screen and (max-width: 450px) {
   .container-item {
     padding-right: 10px;
     padding-left: 10px;
@@ -202,7 +211,18 @@ footer .derecha a {
     font-size: 15px;
   }
 }
-/**/
+/*Producto responsive*/
+@media screen and (min-width: 1030px) {
+  .producto {
+    display: flex;
+    justify-content: stretch;
+    padding: 100px 300px;
+  }
+  .producto .info-producto {
+    padding-left: 100px;
+    padding-top: 40px;
+  }
+}
 @media screen and (max-width: 1024px) {
   .producto {
     display: flex;
@@ -210,17 +230,52 @@ footer .derecha a {
     padding-left: 180px;
     padding-top: 50px;
   }
+  .producto .info-producto {
+    padding-left: 100px;
+    padding-top: 100px;
+  }
 }
 @media screen and (max-width: 820px) {
   .producto {
     display: flex;
     justify-content: stretch;
-    padding-left: 90px;
+    align-items: center;
+    padding-left: 70px;
     padding-top: 50px;
   }
+  .producto .muestrario {
+    padding-right: 10px;
+  }
+  .producto .info-producto {
+    padding-top: 50px;
+    padding-left: 20px;
+  }
 }
-@media screen and (max-width: 432px) {
+@media screen and (max-width: 450px) {
   .producto {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+    padding-right: 70px;
+  }
+  .producto .info-producto {
+    padding-top: 30px;
+  }
+}
+/*inicio y registro responsive*/
+@media screen and (max-width: 450px) {
+  .container-in {
+    width: 300px;
+  }
+  .container-in .cuenta {
+    display: flex;
+    flex-direction: column;
+  }
+  .container-reg {
+    width: 300px;
+  }
+  .container-reg .cuenta {
     display: flex;
     flex-direction: column;
   }
@@ -277,20 +332,6 @@ button:hover {
 
 .separador1 {
   padding: 100px;
-}
-
-.producto {
-  display: flex;
-  justify-content: stretch;
-}
-
-.producto1 {
-  padding: 100px 300px;
-}
-
-.info-producto {
-  padding-left: 100px;
-  padding-top: 40px;
 }
 
 span.product-condicion-principal {
