--- a/scss/componentes/_mediaqueries.scss
+++ b/scss/componentes/_mediaqueries.scss
@@ -11,6 +11,17 @@
 
 /*muestrario responsive*/
 
+@media screen and (min-width: 1030px) {
+    .container-item{
+        padding: 0 50px 0 50px;
+        .info-product{
+            h2{
+                font-size: 25px;
+            }
+        }
+    }
+}
+
 @media screen and (max-width: 1024px) {
     .container-item {
         padding-right: 100px;
@@ -21,7 +32,7 @@
       }
 }
 
-@media screen and (max-width: 430px) {
+@media screen and (max-width: 450px) {
     .container-item {
         padding-right: 10px;
         padding-left: 10px;
@@ -38,7 +49,18 @@
       }
 }
 
-/**/
+/*Producto responsive*/
+@media screen and (min-width: 1030px) {
+    .producto{
+        display: flex;
+        justify-content: stretch;
+        padding: 100px 300px;
+        .info-producto{
+            padding-left: 100px;
+            padding-top: 40px;
+        }
+    }
+}
 
 @media screen and (max-width: 1024px) {
     .producto{
@@ -46,6 +68,10 @@
         justify-content: stretch;
         padding-left: 180px;
         padding-top: 50px;
+        .info-producto{
+            padding-left: 100px;
+            padding-top: 100px;
+        }
       }
 }
 
@@ -54,17 +80,51 @@
     .producto{
         display: flex;
         justify-content: stretch;
-        padding-left: 90px;
+        align-items: center;
+        padding-left: 70px;
         padding-top: 50px;
-      }
+        .muestrario{
+            padding-right: 10px;
+        }
+        .info-producto{
+            padding-top: 50px;
+            padding-left: 20px;
+        }
+    }
 }
 
-@media screen and (max-width: 432px) {
+@media screen and (max-width: 450px) {
     .producto{
         display: flex;
         flex-direction: column;
-      }
+        align-items: center;
+        padding-top: 50px;
+        padding-right: 70px;
+        .info-producto{
+            padding-top: 30px;
+        }
+    }
 }
+
+/*inicio y registro responsive*/
+
+@media screen and (max-width: 450px) {
+    .container-in{
+        width: 300px;
+        .cuenta{
+            display: flex;
+            flex-direction: column;
+        }
+    }
+    .container-reg{
+        width: 300px;
+        .cuenta{
+            display: flex;
+            flex-direction: column;
+        }
+    }
+}
+
 
 
 
